force-app/main/default/objects/Release_Charge__c/Release_Charge__c.object-meta.xml
<CustomObject>
    <label>Release Charge</label>
    <nameField>
        <label>Release Charge No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>