force-app/main/default/objects/Release_Charge__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Release Charges</relationshipLabel>
    <relationshipName>Release_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>