force-app/main/default/objects/Release_Charge__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>132</fullName>
                <label>Administrative Fee</label>
            </value>
            <value>
                <fullName>147</fullName>
                <label>Advance Tow</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
            <value>
                <fullName>148</fullName>
                <label>Clean Up</label>
            </value>
            <value>
                <fullName>D</fullName>
                <isActive>false</isActive>
                <label>D</label>
            </value>
            <value>
                <fullName>133</fullName>
                <label>Dismantling</label>
            </value>
            <value>
                <fullName>149</fullName>
                <label>Dolly</label>
            </value>
            <value>
                <fullName>134</fullName>
                <label>Estimate</label>
            </value>
            <value>
                <fullName>467</fullName>
                <label>Extra Equipment</label>
            </value>
            <value>
                <fullName>135</fullName>
                <label>Fuel Charge</label>
            </value>
            <value>
                <fullName>514</fullName>
                <label>Glass Repairs</label>
            </value>
            <value>
                <fullName>151</fullName>
                <label>Hook Up</label>
            </value>
            <value>
                <fullName>136</fullName>
                <label>Impound Fee</label>
            </value>
            <value>
                <fullName>137</fullName>
                <label>Labor</label>
            </value>
            <value>
                <fullName>138</fullName>
                <label>Lien Release</label>
            </value>
            <value>
                <fullName>152</fullName>
                <label>Mileage</label>
            </value>
            <value>
                <fullName>139</fullName>
                <label>Miscellaneous</label>
            </value>
            <value>
                <fullName>140</fullName>
                <label>Notification Fee</label>
            </value>
            <value>
                <fullName>141</fullName>
                <label>Paid Out</label>
            </value>
            <value>
                <fullName>142</fullName>
                <label>Preservation</label>
            </value>
            <value>
                <fullName>369</fullName>
                <label>Pull-Out Fee</label>
            </value>
            <value>
                <fullName>465</fullName>
                <label>Second Tow</label>
            </value>
            <value>
                <fullName>146</fullName>
                <label>Storage</label>
            </value>
            <value>
                <fullName>377</fullName>
                <label>Tear Down</label>
            </value>
            <value>
                <fullName>154</fullName>
                <label>Tolls</label>
            </value>
            <value>
                <fullName>144</fullName>
                <label>Tow in P/A Charge</label>
            </value>
            <value>
                <fullName>371</fullName>
                <label>Vehicle Inspection</label>
            </value>
            <value>
                <fullName>155</fullName>
                <label>Wait Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>