force-app/main/default/objects/Release_Charge__c/fields/Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Category__c</fullName>
    <label>Event Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASN</fullName>
                <label>Assignment</label>
            </value>
            <value>
                <fullName>RLS</fullName>
                <label>Release</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>