force-app/main/default/objects/Release_Charge__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <label>Responsible Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Responsible_Party</valueSetName>
    </valueSet>
</CustomField>